:sparkles: add unpageable endpoint to the packages controller